examples/checks/src/undefined_remote_constr.erlt.exp
undefined_remote_constr.erlt:8:1: syntax error before: -
%    8| -enum foo() :: (bar).
%     | ^

